# bank-projectVs

./: .gitignore  Admin.cpp  Bapro.cbp  Bapro.depend  Bapro.layout  CMakeLists.txt  Client.cpp  Client.h  Employee.cpp  Person.cpp  Person.h  Validation.cpp  Validation.h  main.cpp
Source/: Admin.cpp  Admin.h  AdminManager.cpp  Client.cpp  Client.h  ClientManager.cpp  DataSourceInterface.h  Employee.cpp  Employee.h  EmployeeManager.cpp  FileManager.cpp  FileManager.h  FilesHelper.cpp  FilesHelper.h  Parser.cpp  Parser.h  Person.cpp  Person.h  Screens.cpp  Screens.h  Validation.cpp  Validation.h  main.cpp
Source/bank/: Admin.cpp  AdminManager.cpp  Client.cpp  ClientManager.cpp  Employee.cpp  EmployeeManager.cpp  FileManager.cpp  Parser.cpp  Person.cpp  Screens.cpp  Validation.cpp
Task 7/: adsa.cbp  adsa.depend  adsa.layout  clients.csv  employees.csv  employees.txt  main.cpp
include/: Admin.h  Client.h  Employee.h  Person.h  Validation.h  bank.h
include/Bank/: Admin.h  Client.h  Employee.h  Person.h  Validation.h
include/bank/: Admin.h  AdminManager.h  ClientManager.h  DataSourceInterface.h  Employee.h  EmployeeManager.h  FileManager.h  FilesHelper.h  Parser.h  Person.h  Screens.h
src/: main.cpp
src/Bank/: Admin.cpp  Client.cpp  Employee.cpp  Person.cpp  Validation.cpp
src/bank/: Admin.cpp  AdminManager.cpp  ClientManager.cpp  EmployeeManager.cpp  FilesHelper.cpp  Screens.cpp
